--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview --port 9080"
+    "preview": "vite preview --port 9080",
+    "start": "npm run build && serve -s dist -l 8080"
   },
   "dependencies": {
+    "serve": "^14.2.5",
     "three": "^0.168.0",
     "urdf-loader": "^0.12.6"
   },
   "devDependencies": {
     "vite": "^5.4.0"
   }
-} 
+}
