--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview --port 9080",
-    "start": "npm run build && serve -s dist -l 8080"
+    "start": "serve -s dist -l 8080"
   },
   "dependencies": {
     "serve": "^14.2.5",
